--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <!-- ADD VIEWPORT META TAG -->
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width">
     <meta charset="UTF-8">
-    <title>Free People Interactive Style Guide Framework</title>
+    <title>Free People Interactive Style Guide</title>
     <link rel="icon" type="image/x-icon" href="http://www.freepeople.com/favicon.ico">
-    <link rel="stylesheet" href="stylesheets/main.css" />
+    <link rel="stylesheet" href="public/css/main.css" />
+    <script src="public/js/modernizr.js"></script>
 </head>
 <body>
 
@@ -182,7 +182,7 @@
         </div>
 
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/scroll.js"></script>
+    <script src="public/js/libs.js"></script>
+    <script src="public/js/app.js"></script>
 </body>
 </html>
