Fixed JS nav highlight bug

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
     <script src="public/js/modernizr.js"></script>
 </head>
 <body>
-
-
-
     <!-- TO DO: 1. Set HTML Element and the BODY Element to "height: 100%;" -->
     <!-- 2. Take the aside w/ class 'right-off-canvas-menu' and move that out of the 'inner-wrap' and put it right below the beginning of the body -->
     <!-- 3. Move 'move-left' class from 'off-canvas-wrap' and add it to the body -->
     <!-- 4. Update JS to toggle the move-left "on and off" w/ the body instead of how it's currently toggled -->
     <!-- 5. That aside menu should now use "webkit-smooth-scrolling" (google the actual property) so that it scrolls smoothly as a fixed menu [DON'T put this on body tag OR html tag, as this will "f" "s" up.]-->
-
 
     <!-- TOP NAV -->
     <div class="row">
@@ -32,9 +28,9 @@
         <!-- DESKTOP NAV -->
         <div class="small-7 columns">
             <div class="top-nav right desktop-menu show-for-medium-up">
-                <a href="#">Components</a>
                 <a href="#">CSS</a>
                 <a href="#">JS</a>
+                <a href="#">Components</a>
             </div>
             <!-- BURGER DISPLAYS ON SMALL (TABLET / SMARTPHONE) -->
             <div class="right mobile-menu show-for-small-only">
@@ -48,10 +44,6 @@
 
     <aside class="right-off-canvas-menu">
         <ul class="off-canvas-list">
-            <li><label>Components</label></li>
-            <li><a href="#">Search</a></li>
-            <li><a href="#">Static Gateway</a></li>
-            <li><a href="#">Sliding Gateway</a></li>
             <li><label>CSS</label></li>
             <li><a href="#">Font Stacks</a></li>
             <li><a href="#">Button Styles</a></li>
@@ -59,61 +51,29 @@
             <li><label>JS</label></li>
             <li><a href="#">BX Slider</a></li>
             <li><a href="#">Video Module</a></li>
+            <li><label>Components</label></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Static Gateway</a></li>
+            <li><a href="#">Sliding Gateway</a></li>
         </ul>
     </aside>
 
     <!-- CONTENT BODY / SIDEBAR -->
     <div class="row tester">
 
-
-
-
-
         <div class="docs-wrap show-for-small-only" data-offcanvas="">
             <div class="inner-wrap">
                 <nav class="tab-bar">
-
                     <section class="middle tab-bar-section">
                         <h1 class="title">Free People Components/JS/CSS</h1>
                     </section>
-
                     <section class="right-small">
                         <a class="right-off-canvas-toggle menu-icon"><span></span></a>
                     </section>
                 </nav>
-
-
-
-
-
-                <section class="main-section">
-                    <div class="row">
-                        <div class="large-12 columns">
-
-                            <h1 id="tables" class="trackOffset">Tables</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.</p>
-                            <div class="codex"><strong>Code:</strong></div>
-                            <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
-
-
-                            <h1 id="dropdowns" class="trackOffset">Dropdowns</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.</p>
-                            <div class="codex"><strong>Code:</strong></div>
-                            <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
-
-
-                        </div>
-                    </div>
-                </section>
-
                 <a class="exit-off-canvas"></a>
-
             </div>
         </div>
-
-
-
-
 
         <!-- CONTENT BODY -->
         <div class="small-12 medium-9 large-9 columns content">
@@ -149,32 +109,24 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.<br /><br />
             <div class="codex"><strong>Code:</strong></div>
             <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.<br /><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
-
         </div>
 
         <!-- SIDEBAR -->
-
         <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed">
             <div class="show-for-small-only"></div>
-
-
             <ul id="sidebarID">
-                <li>
+                <li class="hovered">
                     <a href="#tables">Tables</a>
                 </li>
-
                 <li>
                     <a href="#dropdowns">Dropdowns</a>
                 </li>
-
                 <li>
                     <a href="#tabs">Tabs</a>
                 </li>
-
                 <li>
                     <a href="#grid">Grid</a>
                 </li>
-
                 <li>
                     <a href="#selectors">Selectors</a>
                 </li>
@@ -182,6 +134,7 @@
         </div>
 
     </div>
+
     <script src="public/js/libs.js"></script>
     <script src="public/js/app.js"></script>
 </body>
