updated browserify setup

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     </div>
 
-    <script src="public/js/libs.js"></script>
+    <script src="public/js/vendor-bundle.js"></script>
     <script src="public/js/app.js"></script>
 </body>
 </html>
