added dropdown cjs, added watchify to compliment browserify

--- a/index.html
+++ b/index.html
@@ -85,7 +85,104 @@
             <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
 
             <h1 id="dropdowns" class="trackOffset">Dropdowns</h1>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.<br /><br />
+            <div class="dropdowns group"> 
+                <div class="dropdown floatLeft">
+                           <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                               Dropdown trigger
+                           </a>
+                           <div class="dropdown-container">
+                               <ul class="dropdown-menu" role="menu">
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                               </ul>
+                           </div>
+                       </div>
+                       <div class="dropdown floatLeft second">
+                           <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                               Dropdown trigger
+                           </a>
+                           <div class="dropdown-container">
+                               <ul class="dropdown-menu" role="menu">
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Hello There</a>
+                                   </li>
+                                   <li class="divider"></li>
+                                   <li>
+                                       <a href="#">Welcome</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">To My</a>
+                                   </li>
+                                   <li>
+                                       <a href="#">Dropdown</a>
+                                   </li>
+                               </ul>
+                           </div>
+                       </div>
+                   </div>
             <div class="codex"><strong>Code:</strong></div>
             <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi.</pre>
 
