Started Re-organizing SASS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Free People Interactive Style Guide</title>
     <link rel="icon" type="image/x-icon" href="http://www.freepeople.com/favicon.ico">
     <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/app.css">
     <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&amp;skin=desert"></script>
     <script src="public/js/modernizr.js"></script>
 </head>
@@ -29,7 +30,7 @@
         <!-- DESKTOP NAV -->
         <div class="small-7 columns">
             <div class="top-nav right desktop-menu show-for-medium-up">
-                <a href="#">CSS</a>
+                <a href="#" style="font-size:13px;">CSS</a>
                 <a href="#">JS</a>
                 <a href="#">Components</a>
             </div>
