--- a/index.html
+++ b/index.html
@@ -11,76 +11,39 @@
     <script src="public/js/modernizr.js"></script>
 </head>
 <body>
-    <!-- TO DO: 1. Set HTML Element and the BODY Element to "height: 100%;" -->
-    <!-- 2. Take the aside w/ class 'right-off-canvas-menu' and move that out of the 'inner-wrap' and put it right below the beginning of the body -->
-    <!-- 3. Move 'move-left' class from 'off-canvas-wrap' and add it to the body -->
-    <!-- 4. Update JS to toggle the move-left "on and off" w/ the body instead of how it's currently toggled -->
-    <!-- 5. That aside menu should now use "webkit-smooth-scrolling" (google the actual property) so that it scrolls smoothly as a fixed menu [DON'T put this on body tag OR html tag, as this will "f" "s" up.]-->
 
-    <!-- TOP NAV -->
-    <div class="row">
-
-        <!-- LOGO -->
-        <div class="small-5 columns">
-            <a href="#">
-                <div class="logo"></div>
-            </a>
-        </div>
-
-        <!-- DESKTOP NAV -->
-        <div class="small-7 columns">
-            <div class="top-nav right desktop-menu show-for-medium-up">
-                <a href="#" style="font-size:13px;">CSS</a>
-                <a href="#">JS</a>
-                <a href="#">Components</a>
+    <header>
+        <!-- TOP NAV -->
+        <div class="row">
+            <!-- LOGO -->
+            <div class="small-5 columns">
+                <a href="#">
+                    <div class="logo"></div>
+                </a>
             </div>
-            <!-- BURGER DISPLAYS ON SMALL (TABLET / SMARTPHONE) -->
-            <div class="right mobile-menu show-for-small-only">
-                <div class="top-nav">
-                    <a href="#" class="box-shadow-menu"></a>
+            <!-- DESKTOP NAV -->
+            <nav>
+                <div class="small-7 columns">
+                    <div class="top-nav right desktop-menu show-for-medium-up">
+                        <a href="#" style="font-size:13px;">CSS</a>
+                        <a href="#">JS</a>
+                        <a href="#">Components</a>
+                    </div>
+                    <!-- BURGER DISPLAYS ON SMALL (TABLET / SMARTPHONE) -->
+                    <div class="right mobile-menu show-for-small-only">
+                        <div class="top-nav">
+                            <a href="#" class="box-shadow-menu"></a>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </nav>
         </div>
+    </header>
 
-    </div>
-
-    <aside class="right-off-canvas-menu">
-        <ul class="off-canvas-list">
-            <li><label>CSS</label></li>
-            <li><a href="#">Font Stacks</a></li>
-            <li><a href="#">Button Styles</a></li>
-            <li><a href="#">HTB's</a></li>
-            <li><label>JS</label></li>
-            <li><a href="#">BX Slider</a></li>
-            <li><a href="#">Video Module</a></li>
-            <li><label>Components</label></li>
-            <li><a href="#">Search</a></li>
-            <li><a href="#">Static Gateway</a></li>
-            <li><a href="#">Sliding Gateway</a></li>
-        </ul>
-    </aside>
-
-    <!-- CONTENT BODY / SIDEBAR -->
-    <div class="row tester">
-
-        <div class="docs-wrap show-for-small-only" data-offcanvas="">
-            <div class="inner-wrap">
-                <nav class="tab-bar">
-                    <section class="middle tab-bar-section">
-                        <h1 class="title">Free People Components/JS/CSS</h1>
-                    </section>
-                    <section class="right-small">
-                        <a class="right-off-canvas-toggle menu-icon"><span></span></a>
-                    </section>
-                </nav>
-                <a class="exit-off-canvas"></a>
-            </div>
-        </div>
-
+    <!-- CONTENT BODY -->
+    <div class="row">
         <!-- CONTENT BODY -->
         <div class="small-12 medium-9 large-9 columns content">
-            This is where the content will go. Isn't this nice? Lorem ipsum dolor sit amet.<br><br>
-
             <h1 id="tables" class="trackOffset">Tables</h1>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis. Quisque non faucibus nisi. Suspendisse pellentesque ultrices ante, porttitor egestas dui tempor nec. Fusce et consectetur mauris. Phasellus vitae condimentum quam. Cras vel eros non risus tincidunt pellentesque. Pellentesque sed velit a purus vestibulum iaculis. Nam consectetur quam lacus, in venenatis massa semper sit amet. Pellentesque aliquet non est ut aliquam. Etiam gravida mauris quam, quis lobortis ipsum venenatis vel. Nam elementum orci pharetra metus tincidunt placerat.<br><br>
             <div class="codex"><strong>Code:</strong></div>
@@ -89,102 +52,102 @@
             <h1 id="dropdowns" class="trackOffset">Dropdowns</h1>
             <div class="dropdowns group margin-bottom"> 
                 <div class="dropdown floatLeft">
-                           <a class="dropdown-trigger " data-toggle="dropdown" href="#">
-                               Dropdown trigger
-                           </a>
-                           <div class="dropdown-container">
-                               <ul class="dropdown-menu" role="menu">
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                               </ul>
-                           </div>
-                       </div>
-                       <div class="dropdown floatLeft second">
-                           <a class="dropdown-trigger " data-toggle="dropdown" href="#">
-                               Dropdown trigger
-                           </a>
-                           <div class="dropdown-container">
-                               <ul class="dropdown-menu" role="menu">
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Hello There</a>
-                                   </li>
-                                   <li class="divider"></li>
-                                   <li>
-                                       <a href="#">Welcome</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">To My</a>
-                                   </li>
-                                   <li>
-                                       <a href="#">Dropdown</a>
-                                   </li>
-                               </ul>
-                           </div>
-                       </div>
+                   <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                       Dropdown trigger
+                   </a>
+                   <div class="dropdown-container">
+                       <ul class="dropdown-menu" role="menu">
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                       </ul>
                    </div>
+               </div>
+               <div class="dropdown floatLeft second">
+                   <a class="dropdown-trigger " data-toggle="dropdown" href="#">
+                       Dropdown trigger
+                   </a>
+                   <div class="dropdown-container">
+                       <ul class="dropdown-menu" role="menu">
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                           <li>
+                               <a href="#">Hello There</a>
+                           </li>
+                           <li class="divider"></li>
+                           <li>
+                               <a href="#">Welcome</a>
+                           </li>
+                           <li>
+                               <a href="#">To My</a>
+                           </li>
+                           <li>
+                               <a href="#">Dropdown</a>
+                           </li>
+                       </ul>
+                   </div>
+               </div>
+           </div>
             <div class="codex"><strong>Code:</strong></div>
 <pre class="prettyprint lang-html">
 &lt;div class=&quot;dropdown&quot;&gt;
@@ -225,26 +188,28 @@
         </div>
 
         <!-- SIDEBAR -->
-        <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed">
-            <div class="show-for-small-only"></div>
-            <ul id="sidebarID">
-                <li class="hovered">
-                    <a href="#tables">Tables</a>
-                </li>
-                <li>
-                    <a href="#dropdowns">Dropdowns</a>
-                </li>
-                <li>
-                    <a href="#tabs">Tabs</a>
-                </li>
-                <li>
-                    <a href="#grid">Grid</a>
-                </li>
-                <li>
-                    <a href="#selectors">Selectors</a>
-                </li>
-            </ul>
-        </div>
+        <nav>
+            <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed">
+                <div class="show-for-small-only"></div>
+                <ul id="sidebarID">
+                    <li class="hovered">
+                        <a href="#tables">Tables</a>
+                    </li>
+                    <li>
+                        <a href="#dropdowns">Dropdowns</a>
+                    </li>
+                    <li>
+                        <a href="#tabs">Tabs</a>
+                    </li>
+                    <li>
+                        <a href="#grid">Grid</a>
+                    </li>
+                    <li>
+                        <a href="#selectors">Selectors</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
     </div>
 
