Updated application scrolling nav functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="public/js/modernizr.js"></script>
 </head>
 <body>
-
     <!-- Off-screen nav: mobile -->
     <nav>
         <div class="small-12 small-centered medium-3 large-3 columns sidebar-app fixed">
@@ -119,8 +118,8 @@
             <!-- SKINS -->
             <h1 id="skins" data-offset>Skins</h1>
             <div class="dark-gray-border-box">
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
-                Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
+                Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
             </div>
             <div class="pink-border">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna.
@@ -130,7 +129,7 @@
                 <h3>Code:</h3>
 <pre class="prettyprint lang-html">
 &lt;div class="dark-gray-border-box"&gt;
-    &lt;span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.&lt;/span&gt;
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
 &lt;/div&gt;
 &lt;div class="pink-border"&gt;
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis condimentum magna. Curabitur in nisl id elit feugiat tincidunt. Donec aliquet volutpat nisl vel venenatis.
