Re-factored app scroll module

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 </pre>
             </div>
             <!-- DROPDOWNS -->
-            <h1 id="dropdowns" data-offset>Dropdowns</h1>
+            <!--<h1 id="dropdowns" data-offset>Dropdowns</h1>
             <div class="dropdowns group margin-bottom">
                 <div class="dropdown floatLeft">
                     <a class="dropdown-trigger " data-toggle="dropdown" href="#">
@@ -328,7 +328,7 @@
   &lt;/div&gt;
 &lt;/div&gt;
 </pre>
-        </div>
+        </div>-->
 
     </div>
 
